Change ekimex images

--- a/public/coniferous-plywood-pine.html
+++ b/public/coniferous-plywood-pine.html
@@ -74,7 +74,7 @@
             <div class="row content">
                 <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
                     <h2>Coniferous Plywood Pine/Spruc</h2>
-                    <img src="./ekimex/assets/img/Coniferous Plywood PineSpruce.jpg" alt="">
+                    <img src="./ekimex/assets/img/Pine_plywood.jpg" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left" data-aos-delay="200">
                     <p>
