--- a/public/film-faced-colored-plywood.html
+++ b/public/film-faced-colored-plywood.html
@@ -74,7 +74,7 @@
             <div class="row content">
                 <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
                     <h2>Film Faced Colored Plywood</h2>
-                    <img src="./ekimex/assets/img/Film Faced Colored Plywood2.jpg" alt="">
+                    <img src="./ekimex/assets/img/Colored_plywood.jpg" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left" data-aos-delay="200">
                     <p>
