--- a/public/bed-slats.html
+++ b/public/bed-slats.html
@@ -74,7 +74,7 @@
             <div class="row content">
                 <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
                     <h2>Bed slats</h2>
-                    <img src="./ekimex/assets/img/Bed slats.jpg" alt="">
+                    <img src="./ekimex/assets/img/BED_SLATS.jpg" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left" data-aos-delay="200">
                     <p>
