--- a/public/cross-laminated-timber.html
+++ b/public/cross-laminated-timber.html
@@ -74,7 +74,7 @@
             <div class="row content">
                 <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
                     <h2>Cross laminated timber</h2>
-                    <img src="./ekimex/assets/img/cross laminated timber.jpg" alt="">
+                    <img src="./ekimex/assets/img/CLT.jpg" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left" data-aos-delay="200">
                     <p>
