--- a/public/three-layer-panels.html
+++ b/public/three-layer-panels.html
@@ -74,7 +74,7 @@
             <div class="row content">
                 <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
                     <h2>Three-layer panels (SWP)</h2>
-                    <img src="./ekimex/assets/img/Three-layer panels (SWP).jpg" alt="">
+                    <img src="./ekimex/assets/img/SWP.webp" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left" data-aos-delay="200">
                     <p>
